--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "qulinary-bower-uservoice",
+  "version": "0.0.1",
   "homepage": "https://github.com/QulinaryOrg/bower-uservoice",
   "authors": [
     "Matthew J Martin. <matthew@qulinary.com>"
